# Programa-Delfin

./: LICENSE  README.md  pyproject.toml
docs/: ARCHITECTURE.md
infra/docker/: Dockerfile.api  Dockerfile.dashboard  docker-compose.yml
infra/gcp/: bigquery_schema.sql  cloudrun-api.yaml  firestore.rules
infra/github/workflows/: ci.yml  deploy.yml  train.yml
manuscript/: Orquestacion_Urgencias_Manuscrito.docx  build_docx.py
manuscript/sections/: 01_abstract.md  02_introduccion.md  03_marco_teorico.md  04_metodologia.md  05_resultados.md  06_discusion.md  07_conclusiones.md  08_referencias.md
mlops/: MLproject  dvc.yaml
models/: dqn_model.pt
requirements/: base.txt  dev.txt  prod.txt
scripts/: deploy_gcp.sh  export_model.py  prepare_data.py
simulation/: generate_manuscript_assets.py  requirements.txt
simulation/agents/: baselines.py  dqn.py  gym_env.py  mdp.py
simulation/config/: ed_params.yaml
simulation/ed_digital_twin/: distributions.py  sync.py  twin.py
simulation/experiments/: evaluate_baselines.py  robustness.py  train_dqn.py
simulation/outputs/tables/: all_results.csv  baseline_results.csv  baseline_summary.csv  comparison_table.csv  dqn_results.csv  fidelity_validation.json  robustness_results.csv  robustness_summary.csv  training_history.json
simulation/xai/: explainer.py
src/ed_orchestrator/: __init__.py  config.py
src/ed_orchestrator.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/ed_orchestrator/api/: main.py  schemas.py
src/ed_orchestrator/rl/: env.py  (+2 more)
tests/: test_orchestrator.py
(+6 files in other folders)
