[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ed-orchestrator"
version = "0.1.0"
description = "Hybrid cyber-physical hospital orchestration for emergency departments"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "simpy>=4.1.1",
    "gymnasium>=1.0.0",
    "numpy>=1.24.0,<2.0.0",
    "pandas>=2.0.0",
    "torch>=2.0.0",
    "scipy>=1.10.0",
    "shap>=0.43.0",
    "pyyaml>=6.0",
    "pydantic>=2.6.0",
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "streamlit>=1.32.0",
    "mlflow>=2.10.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
gcp = [
    "google-cloud-firestore>=2.16.0",
    "google-cloud-bigquery>=3.20.0",
    "google-cloud-secret-manager>=2.20.0",
]
rl = ["ray[rllib]>=2.9.0"]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.3.0",
    "dvc>=3.0.0",
]
all = ["ed-orchestrator[gcp,rl,dev]"]

[project.scripts]
ed-api = "ed_orchestrator.api.main:run"
ed-dashboard = "ed_orchestrator.dashboard.app:run"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src", "simulation"]
